# intelligent-candidate-discovery

./: README.md  pyproject.toml
app/: config.py  main.py
app/api/routes/: candidates.py  jobs.py
app/db/: models.py  session.py
app/engine/: filters.py  pipeline.py  retrieval.py
app/models/: candidate.py  job.py  result.py
app/services/: embeddings.py
