[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.0",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8",
    "rank-bm25>=0.2",
    "pandas>=2.0",
    "numpy>=1.26",
    "rapidfuzz>=3.0",
    "lightgbm>=4.0",
    "scikit-learn>=1.4",
    "anthropic>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "httpx>=0.27",
    "langchain-google-genai",
    "sqlmodel>=0.0.38",
    "bm25>=0.3.9",
    "bm25s>=0.3.9",
    "langchain-community>=0.4.2",
    "psycopg2-binary>=2.9",
    "google-genai>=0.1",
    "tenacity>=8.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
